@@ -1,9 +1,7 @@
 package io.quarkus.vertx.core.runtime;
 
-import static io.vertx.core.file.impl.FileResolverImpl.CACHE_DIR_BASE_PROP_NAME;
-
 import java.time.Duration;
-import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import java.util.OptionalInt;
@@ -19,98 +17,26 @@ import io.quarkus.runtime.LaunchMode;
 import io.quarkus.runtime.RuntimeValue;
 import io.quarkus.runtime.ThreadPoolConfig;
 import io.quarkus.runtime.configuration.DurationConverter;
-import io.quarkus.vertx.core.runtime.VertxCoreRecorder.VertxOptionsCustomizer;
+import io.quarkus.vertx.core.runtime.VertxCoreRecorder.VertxCustomizer;
 import io.quarkus.vertx.core.runtime.config.AddressResolverConfiguration;
-import io.quarkus.vertx.core.runtime.config.ClusterConfiguration;
-import io.quarkus.vertx.core.runtime.config.EventBusConfiguration;
-import io.quarkus.vertx.core.runtime.config.JksConfiguration;
-import io.quarkus.vertx.core.runtime.config.PemKeyCertConfiguration;
-import io.quarkus.vertx.core.runtime.config.PemTrustCertConfiguration;
-import io.quarkus.vertx.core.runtime.config.PfxConfiguration;
 import io.quarkus.vertx.core.runtime.config.VertxConfiguration;
 import io.vertx.core.Vertx;
 import io.vertx.core.VertxOptions;
 import io.vertx.core.dns.AddressResolverOptions;
+import io.vertx.core.impl.SysProps;
 
 public class VertxCoreProducerTest {
 
     private VertxCoreRecorder recorder;
 
     @BeforeEach
-    public void setUp() throws Exception {
+    public void setUp() {
         recorder = new VertxCoreRecorder(new RuntimeValue<>(), new RuntimeValue<>(), new RuntimeValue<>());
     }
 
     @AfterEach
-    public void tearDown() throws Exception {
+    public void tearDown() {
         recorder.destroy();
-    }
-
-    @Test
-    public void shouldEnableClustering() {
-        VertxConfiguration configuration = new DefaultVertxConfiguration() {
-
-            @Override
-            public ClusterConfiguration cluster() {
-                return new ClusterConfiguration() {
-
-                    @Override
-                    public OptionalInt publicPort() {
-                        return OptionalInt.empty();
-                    }
-
-                    @Override
-                    public Optional<String> publicHost() {
-                        return Optional.empty();
-                    }
-
-                    @Override
-                    public OptionalInt port() {
-                        return OptionalInt.empty();
-                    }
-
-                    @Override
-                    public Duration pingReplyInterval() {
-                        return Duration.ofSeconds(2);
-                    }
-
-                    @Override
-                    public Duration pingInterval() {
-                        return Duration.ofSeconds(2);
-                    }
-
-                    @Override
-                    public String host() {
-                        return "localhost";
-                    }
-
-                    @Override
-                    public boolean clustered() {
-                        return true;
-                    }
-                };
-            }
-
-            @Override
-            public int workerPoolSize() {
-                return 10;
-            }
-
-            @Override
-            public Duration warningExceptionTime() {
-                return Duration.ofSeconds(1);
-            }
-        };
-
-        try {
-
-            VertxCoreRecorder.initialize(configuration, null, new DefaultThreadPoolConfig(), null, LaunchMode.TEST, List.of(),
-                    List.of());
-            Assertions.fail("It should not have a cluster manager on the classpath, and so fail the creation");
-        } catch (IllegalStateException e) {
-            Assertions.assertTrue(e.getMessage().contains("No ClusterManagerFactory"),
-                    "The message should contain ''. Message: " + e.getMessage());
-        }
     }
 
     @Test
@@ -193,7 +119,7 @@ public class VertxCoreProducerTest {
             }
         };
 
-        VertxOptionsCustomizer customizers = new VertxOptionsCustomizer(Arrays.asList(
+        VertxCustomizer customizers = new VertxCustomizer(Collections.emptyList(), List.of(
                 new Consumer<VertxOptions>() {
                     @Override
                     public void accept(VertxOptions vertxOptions) {
@@ -214,7 +140,7 @@ public class VertxCoreProducerTest {
     @Test
     public void shouldInvokeCustomizers() {
         final AtomicBoolean called = new AtomicBoolean(false);
-        VertxOptionsCustomizer customizers = new VertxOptionsCustomizer(Arrays.asList(
+        VertxCustomizer customizers = new VertxCustomizer(Collections.emptyList(), List.of(
                 new Consumer<VertxOptions>() {
                     @Override
                     public void accept(VertxOptions vertxOptions) {
@@ -230,8 +156,8 @@ public class VertxCoreProducerTest {
     public void vertxCacheDirectoryBySystemProperty() {
         final String cacheDir = System.getProperty("user.dir");
         try {
-            System.setProperty(CACHE_DIR_BASE_PROP_NAME, cacheDir);
-            VertxOptionsCustomizer customizers = new VertxOptionsCustomizer(List.of(
+            System.setProperty(SysProps.FILE_CACHE_DIR.name, cacheDir);
+            VertxCustomizer customizers = new VertxCustomizer(Collections.emptyList(), List.of(
                     vertxOptions -> {
                         Assertions.assertNotNull(vertxOptions.getFileSystemOptions());
                         Assertions.assertEquals(cacheDir, vertxOptions.getFileSystemOptions().getFileCacheDir());
@@ -239,7 +165,7 @@ public class VertxCoreProducerTest {
             VertxCoreRecorder.initialize(new DefaultVertxConfiguration(), customizers, new DefaultThreadPoolConfig(),
                     null, LaunchMode.TEST, List.of(), List.of());
         } finally {
-            System.clearProperty(CACHE_DIR_BASE_PROP_NAME);
+            System.clearProperty(SysProps.FILE_CACHE_DIR.name);
         }
     }
 
@@ -315,250 +241,8 @@ public class VertxCoreProducerTest {
         }
 
         @Override
-        public EventBusConfiguration eventbus() {
-            return new EventBusConfiguration() {
-
-                @Override
-                public PfxConfiguration trustCertificatePfx() {
-                    return new PfxConfiguration() {
-                        @Override
-                        public Optional<String> path() {
-                            return Optional.empty();
-                        }
-
-                        @Override
-                        public Optional<String> password() {
-                            return Optional.empty();
-                        }
-
-                        @Override
-                        public boolean enabled() {
-                            return false;
-                        }
-                    };
-                }
-
-                @Override
-                public PemTrustCertConfiguration trustCertificatePem() {
-                    return new PemTrustCertConfiguration() {
-
-                        @Override
-                        public boolean enabled() {
-                            return false;
-                        }
-
-                        @Override
-                        public Optional<List<String>> certs() {
-                            return Optional.empty();
-                        }
-                    };
-                }
-
-                @Override
-                public JksConfiguration trustCertificateJks() {
-                    return new JksConfiguration() {
-
-                        @Override
-                        public Optional<String> path() {
-                            return Optional.empty();
-                        }
-
-                        @Override
-                        public Optional<String> password() {
-                            return Optional.empty();
-                        }
-
-                        @Override
-                        public boolean enabled() {
-                            return false;
-                        }
-                    };
-                }
-
-                @Override
-                public boolean trustAll() {
-                    return false;
-                }
-
-                @Override
-                public OptionalInt trafficClass() {
-                    return OptionalInt.empty();
-                }
-
-                @Override
-                public boolean tcpNoDelay() {
-                    return false;
-                }
-
-                @Override
-                public boolean tcpKeepAlive() {
-                    return false;
-                }
-
-                @Override
-                public boolean ssl() {
-                    return false;
-                }
-
-                @Override
-                public OptionalInt soLinger() {
-                    return OptionalInt.empty();
-                }
-
-                @Override
-                public OptionalInt sendBufferSize() {
-                    return OptionalInt.empty();
-                }
-
-                @Override
-                public boolean reusePort() {
-                    return false;
-                }
-
-                @Override
-                public boolean reuseAddress() {
-                    return false;
-                }
-
-                @Override
-                public Duration reconnectInterval() {
-                    return Duration.ofSeconds(1);
-                }
-
-                @Override
-                public int reconnectAttempts() {
-                    return 0;
-                }
-
-                @Override
-                public OptionalInt receiveBufferSize() {
-                    return OptionalInt.empty();
-                }
-
-                @Override
-                public PfxConfiguration keyCertificatePfx() {
-                    return new PfxConfiguration() {
-
-                        @Override
-                        public Optional<String> path() {
-                            return Optional.empty();
-                        }
-
-                        @Override
-                        public Optional<String> password() {
-                            return Optional.empty();
-                        }
-
-                        @Override
-                        public boolean enabled() {
-                            return false;
-                        }
-                    };
-                }
-
-                @Override
-                public PemKeyCertConfiguration keyCertificatePem() {
-                    return new PemKeyCertConfiguration() {
-
-                        @Override
-                        public Optional<List<String>> keys() {
-                            return Optional.empty();
-                        }
-
-                        @Override
-                        public boolean enabled() {
-                            return false;
-                        }
-
-                        @Override
-                        public Optional<List<String>> certs() {
-                            return Optional.empty();
-                        }
-                    };
-                }
-
-                @Override
-                public JksConfiguration keyCertificateJks() {
-                    return new JksConfiguration() {
-
-                        @Override
-                        public Optional<String> path() {
-                            return Optional.empty();
-                        }
-
-                        @Override
-                        public Optional<String> password() {
-                            return Optional.empty();
-                        }
-
-                        @Override
-                        public boolean enabled() {
-                            return false;
-                        }
-                    };
-                }
-
-                @Override
-                public Optional<Duration> idleTimeout() {
-                    return Optional.empty();
-                }
-
-                @Override
-                public Duration connectTimeout() {
-                    return Duration.ofSeconds(60);
-                }
-
-                @Override
-                public String clientAuth() {
-                    return "NONE";
-                }
-
-                @Override
-                public OptionalInt acceptBacklog() {
-                    return OptionalInt.empty();
-                }
-            };
-        }
-
-        @Override
-        public ClusterConfiguration cluster() {
-            return new ClusterConfiguration() {
-
-                @Override
-                public OptionalInt publicPort() {
-                    return OptionalInt.empty();
-                }
-
-                @Override
-                public Optional<String> publicHost() {
-                    return Optional.empty();
-                }
-
-                @Override
-                public OptionalInt port() {
-                    return OptionalInt.empty();
-                }
-
-                @Override
-                public Duration pingReplyInterval() {
-                    return Duration.ofSeconds(20);
-                }
-
-                @Override
-                public Duration pingInterval() {
-                    return Duration.ofSeconds(20);
-                }
-
-                @Override
-                public String host() {
-                    return "localhost";
-                }
-
-                @Override
-                public boolean clustered() {
-                    return false;
-                }
-            };
+        public Duration blockedThreadCheckInterval() {
+            return Duration.ofSeconds(1);
         }
 
         @Override
